--- a/views/index.html
+++ b/views/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="../css/base.css">
 </head>
 <body>
-    <div id="container">
+    <div id="loading"></div>
+    <div id="container" class="blur">
         <ul class="bg">
             <li class="a"></li>
-            <li class="b"></li>
+            <li class="b hide"></li>
         </ul>
     </div>
+    <div id="menu"></div>
 </body>
 <script src="../js/fk.js"></script>
 <script src="../js/base.js"></script>
