--- a/css/base.css
+++ b/css/base.css
@@ -9,18 +9,11 @@ body, img, ul {
     width: 100%;
     height: 100%;
     background: #000;
-    /*background: #DDD no-repeat;*/
-    /*-webkit-background-size: 150%;*/
-    /*background-size: 150%;*/
     overflow: hidden;
 }
 #container .bg{
     width: 100%;
     height: 100%;
-    -webkit-filter: blur(15px); /* Chrome, Opera */
-    -moz-filter: blur(15px);
-    -ms-filter: blur(15px);
-    filter: blur(15px);
 }
 #container .bg li {
     height: 100%;
@@ -29,16 +22,61 @@ body, img, ul {
     -webkit-background-size: 150%;
     background-size: 150%;
     position: absolute;
-    -webkit-transition: opacity 2s;
-    -moz-transition: opacity 2s;
-    -ms-transition: opacity 2s;
-    -o-transition: opacity 2s;
-    transition: opacity 2s;
+    /*-webkit-transition: opacity 2s;*/
+    /*-moz-transition: opacity 2s;*/
+    /*-ms-transition: opacity 2s;*/
+    /*-o-transition: opacity 2s;*/
+    /*transition: opacity 2s;*/
 }
-
+ /* TODO delete when finished */
 li.a{
     background-image: url(../images/flying_elephant.jpg);
 }
 li.b{
     background-image: url(../images/kitty_with_rose.jpg);
+}
+
+#menu{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    background: rgba(255, 255, 255, 0.5) url(../images/best_wishes.png) no-repeat 1px 8px;
+    background-size: 50px;
+}
+
+.mask{
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+}
+.blur{
+    -webkit-filter: blur(15px); /* Chrome, Opera */
+    -moz-filter: blur(15px);
+    -ms-filter: blur(15px);
+    filter: blur(15px);
+    filter: url(../images/blur.svg#blur);
+}
+.hide{
+    display: none;
+}
+
+#loading{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    background: black url(../images/best_wishes.png) no-repeat center center;
+    background-size: 50%;
 }
