--- a/css/base.css
+++ b/css/base.css
@@ -4,17 +4,19 @@ body, img, ul {
     padding: 0
 }
 
-#container{
+#container {
     position: absolute;
     width: 100%;
     height: 100%;
     background: #000;
     overflow: hidden;
 }
-#container .bg{
+
+#container .bg {
     width: 100%;
     height: 100%;
 }
+
 #container .bg li {
     height: 100%;
     width: 100%;
@@ -28,15 +30,17 @@ body, img, ul {
     /*-o-transition: opacity 2s;*/
     /*transition: opacity 2s;*/
 }
- /* TODO delete when finished */
-li.a{
+
+/* TODO delete when finished */
+li.a {
     background-image: url(../images/flying_elephant.jpg);
 }
-li.b{
+
+li.b {
     background-image: url(../images/kitty_with_rose.jpg);
 }
 
-#menu{
+#menu {
     width: 50px;
     height: 50px;
     position: absolute;
@@ -49,34 +53,56 @@ li.b{
     background-size: 50px;
 }
 
-.mask{
+.mask {
     position: absolute;
     top: 0px;
     bottom: 0px;
     width: 100%;
     height: 100%;
 }
-.blur{
+
+.blur {
     -webkit-filter: blur(15px); /* Chrome, Opera */
     -moz-filter: blur(15px);
     -ms-filter: blur(15px);
     filter: blur(15px);
     filter: url(../images/blur.svg#blur);
 }
-.hide{
+
+.hide {
     display: none;
 }
 
-#loading{
+#loading {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 10;
+    /*background-color: white;*/
+    background-color: #FF8C8C;
+    overflow: hidden;
+
+    -webkit-transition: opacity 0.5s;
+    -moz-transition: opacity 0.5s;
+    -ms-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    transition: opacity 0.5s;
+}
+
+
+#loading > img {
+    width: 250px;
+    height: 162px;
+
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     -ms-transition: all 0.5s;
     -o-transition: all 0.5s;
     transition: all 0.5s;
-    background: black url(../images/best_wishes.png) no-repeat center center;
-    background-size: 50%;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -125px;
+    margin-top: -81px;
 }
