--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/base.css">
 </head>
 <body>
-    <div id="loading"></div>
+    <div id="loading"><img src="../images/best_wishes.png" alt=""></div>
     <div id="container" class="blur">
         <ul class="bg">
             <li class="a"></li>
@@ -16,6 +16,7 @@
     </div>
     <div id="menu"></div>
 </body>
-<script src="../js/fk.js"></script>
+<!--<script src="../js/fk.js"></script>-->
+<script src="../js/zepto.js"></script>
 <script src="../js/base.js"></script>
 </html>
