--- a/css/base.css
+++ b/css/base.css
@@ -62,11 +62,11 @@ li.b {
 }
 
 .blur {
-    -webkit-filter: blur(15px); /* Chrome, Opera */
-    -moz-filter: blur(15px);
-    -ms-filter: blur(15px);
-    filter: blur(15px);
-    filter: url(../images/blur.svg#blur);
+    /*-webkit-filter: blur(15px); /!* Chrome, Opera *!/*/
+    /*-moz-filter: blur(15px);*/
+    /*-ms-filter: blur(15px);*/
+    /*filter: blur(15px);*/
+    /*filter: url(../images/blur.svg#blur);*/
 }
 
 .hide {
@@ -89,20 +89,26 @@ li.b {
     transition: opacity 0.5s;
 }
 
-
 #loading > img {
-    width: 250px;
     height: 162px;
+    display: block;
+    margin: 0 auto;
 
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -ms-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
+    /*-webkit-transition: height 0.5s, top 0.5s;*/
+    /*-moz-transition: height 0.5s, top 0.5s;*/
+    /*-ms-transition: height 0.5s, top 0.5s;*/
+    /*-o-transition: height 0.5s, top 0.5s;*/
+    /*transition: height 0.5s, top 0.5s;*/
     
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -125px;
-    margin-top: -81px;
+    -webkit-transition: height 0.5s;
+    -moz-transition: height 0.5s;
+    -ms-transition: height 0.5s;
+    -o-transition: height 0.5s;
+    transition: height 0.5s;
+
+    position: relative;
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*margin-left: -125px;*/
+    /*margin-top: -81px;*/
 }
