--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../css/base.css">
+    <!--<link rel="stylesheet" href="../css/base.css">-->
+    <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date).getTime() + '">')</script>
 </head>
 <body>
     <div id="loading"><img src="../images/best_wishes.png" alt=""></div>
@@ -18,5 +19,7 @@
 </body>
 <!--<script src="../js/fk.js"></script>-->
 <script src="../js/zepto.js"></script>
-<script src="../js/base.js"></script>
+<script>
+    document.write('<script src="../js/base.js?t= ' + (new Date).getTime() + '"><\/script>');
+</script>
 </html>
