--- a/css/base.css
+++ b/css/base.css
@@ -65,7 +65,7 @@ li.b {
     /*-webkit-filter: blur(15px); /!* Chrome, Opera *!/*/
     /*-moz-filter: blur(15px);*/
     /*-ms-filter: blur(15px);*/
-    /*filter: blur(15px);*/
+    /*/!*filter: blur(15px);*!/*/
     /*filter: url(../images/blur.svg#blur);*/
 }
 
@@ -94,21 +94,19 @@ li.b {
     display: block;
     margin: 0 auto;
 
-    /*-webkit-transition: height 0.5s, top 0.5s;*/
-    /*-moz-transition: height 0.5s, top 0.5s;*/
-    /*-ms-transition: height 0.5s, top 0.5s;*/
-    /*-o-transition: height 0.5s, top 0.5s;*/
-    /*transition: height 0.5s, top 0.5s;*/
+    -webkit-transition: height 0.5s, top 0.5s;
+    -moz-transition: height 0.5s, top 0.5s;
+    -ms-transition: height 0.5s, top 0.5s;
+    -o-transition: height 0.5s, top 0.5s;
+    transition: height 0.5s, top 0.5s;
     
-    -webkit-transition: height 0.5s;
-    -moz-transition: height 0.5s;
-    -ms-transition: height 0.5s;
-    -o-transition: height 0.5s;
-    transition: height 0.5s;
-
     position: relative;
     /*top: 50%;*/
     /*left: 50%;*/
     /*margin-left: -125px;*/
     /*margin-top: -81px;*/
+}
+body{
+    width: 100%;
+    height: 627px;
 }
