--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,8 @@
     <div id="menu"></div>
 </body>
 <!--<script src="../js/fk.js"></script>-->
-<script src="../js/zepto.js"></script>
+<!--<script src="../js/zepto.js"></script>-->
+<script src="../js/esl/esl.js"></script>
 <script>
     document.write('<script src="../js/base.js?t= ' + (new Date).getTime() + '"><\/script>');
 </script>
