--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date).getTime() + '">')</script>
 </head>
 <body>
-    <div id="loading"><img src="../images/best_wishes.png" alt=""></div>
+    <div id="loading"><im1g src="../images/best_wishes.png" alt=""></div>
     <div id="container" class="blur">
         <ul class="bg">
             <li class="a"></li>
@@ -18,9 +18,9 @@
     <div id="menu"></div>
 </body>
 <!--<script src="../js/fk.js"></script>-->
-<!--<script src="../js/zepto.js"></script>-->
+<script src="../js/zepto.js"></script>
 <script src="../js/esl/esl.js"></script>
 <script>
-    document.write('<script src="../js/base.js?t= ' + (new Date).getTime() + '"><\/script>');
+    document.write('<script src="../js/base.js?t=' + (new Date).getTime() + '"><\/script>');
 </script>
 </html>
