--- a/css/base.css
+++ b/css/base.css
@@ -78,35 +78,43 @@ li.b {
     width: 100%;
     height: 100%;
     z-index: 10;
-    /*background-color: white;*/
     background-color: #FF8C8C;
     overflow: hidden;
 
-    -webkit-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    -ms-transition: opacity 0.5s;
-    -o-transition: opacity 0.5s;
-    transition: opacity 0.5s;
+    /*-webkit-transition: opacity 0.5s;*/
+    /*-moz-transition: opacity 0.5s;*/
+    /*-ms-transition: opacity 0.5s;*/
+    /*-o-transition: opacity 0.5s;*/
+    /*transition: opacity 0.5s;*/
 }
 
 #loading > img {
     height: 162px;
     display: block;
     margin: 0 auto;
+    opacity: 0;
+    position: relative;
+}
 
+img.loading-animate {
     -webkit-transition: height 0.5s, top 0.5s;
     -moz-transition: height 0.5s, top 0.5s;
     -ms-transition: height 0.5s, top 0.5s;
     -o-transition: height 0.5s, top 0.5s;
     transition: height 0.5s, top 0.5s;
-    
-    position: relative;
-    /*top: 50%;*/
-    /*left: 50%;*/
-    /*margin-left: -125px;*/
-    /*margin-top: -81px;*/
 }
 body{
     width: 100%;
     height: 627px;
+}
+#loading {
+    background: #FF8C8C url(../images/best_wishes.png) no-repeat center;
+    background-size: 250px;
+
+
+    -webkit-transition: background-size 0.5s, opacity 0.5s;
+    -moz-transition: background-size 0.5s, opacity 0.5s;
+    -ms-transition: background-size 0.5s, opacity 0.5s;
+    -o-transition: background-size 0.5s, opacity 0.5s;
+    transition: background-size 0.5s, opacity 0.5s;
 }
