--- a/css/base.css
+++ b/css/base.css
@@ -62,11 +62,11 @@ li.b {
 }
 
 .blur {
-    /*-webkit-filter: blur(15px); /!* Chrome, Opera *!/*/
-    /*-moz-filter: blur(15px);*/
-    /*-ms-filter: blur(15px);*/
-    /*/!*filter: blur(15px);*!/*/
-    /*filter: url(../images/blur.svg#blur);*/
+    -webkit-filter: blur(15px); /* Chrome, Opera */
+    -moz-filter: blur(15px);
+    -ms-filter: blur(15px);
+    /*filter: blur(15px);*/
+    filter: url(../images/blur.svg#blur);
 }
 
 .hide {
@@ -104,17 +104,25 @@ img.loading-animate {
     transition: height 0.5s, top 0.5s;
 }
 body{
+    position: absolute;
     width: 100%;
-    height: 627px;
+    height: 100%;
 }
 #loading {
     background: #FF8C8C url(../images/best_wishes.png) no-repeat center;
     background-size: 250px;
-
 
     -webkit-transition: background-size 0.5s, opacity 0.5s;
     -moz-transition: background-size 0.5s, opacity 0.5s;
     -ms-transition: background-size 0.5s, opacity 0.5s;
     -o-transition: background-size 0.5s, opacity 0.5s;
     transition: background-size 0.5s, opacity 0.5s;
+
+    /*position: absolute;*/
+    /*left: -200px;*/
+    /*-webkit-transition: left 1s;*/
+    /*-moz-transition: left 1s;*/
+    /*-ms-transition: left 1s;*/
+    /*-o-transition: left 1s;*/
+    /*transition: left 1s;*/
 }
