--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,9 @@
     <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date).getTime() + '">')</script>
 </head>
 <body>
-    <div id="loading"><im1g src="../images/best_wishes.png" alt=""></div>
+    <div id="loading">
+        <!--<img src="../images/best_wishes.png" alt="">-->
+    </div>
     <div id="container" class="blur">
         <ul class="bg">
             <li class="a"></li>
