--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date).getTime() + '">')</script>
 </head>
 <body>
-    <div id="loading">
+    <div class="loading">
         <!--<img src="../images/best_wishes.png" alt="">-->
     </div>
     <div id="container" class="blur">
@@ -20,8 +20,8 @@
     <div id="menu"></div>
 </body>
 <!--<script src="../js/fk.js"></script>-->
-<script src="../js/zepto.js"></script>
-<script src="../js/esl/esl.js"></script>
+<!--<script src="../js/zepto.js"></script>-->
+<!--<script src="../js/esl/esl.js"></script>-->
 <script>
     document.write('<script src="../js/base.js?t=' + (new Date).getTime() + '"><\/script>');
 </script>
