--- a/css/base.css
+++ b/css/base.css
@@ -4,66 +4,15 @@ body, img, ul {
     padding: 0
 }
 
-#container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    overflow: hidden;
-}
-
-#container .bg {
-    width: 100%;
-    height: 100%;
-}
-
-#container .bg li {
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    -webkit-background-size: 100%;
-    background-size: 100%;
-    position: absolute;
-}
-
-/* TODO delete when finished */
-li.a {
-    background-image: url(../images/flying_elephant.jpg);
-}
-
-li.b {
-    background-image: url(../images/kitty_with_rose.jpg);
-}
-
-#menu {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px;
-    background: rgba(255, 255, 255, 0.5) url(../images/best_wishes_tiny.png) no-repeat 1px 8px;
-    background-size: 50px;
-}
-
-.blur {
-    /*-webkit-filter: blur(15px); /!* Chrome, Opera *!/*/
-    /*-moz-filter: blur(15px);*/
-    /*-ms-filter: blur(15px);*/
-    /*filter: blur(15px);*/
-    /*filter: url(../images/blur.svg#blur);*/
-}
-
-.hide {
-    display: none;
-}
-
 body {
     position: absolute;
     width: 100%;
     height: 100%;
+    background-color: #FF8C8C;
+}
+
+.hide {
+    display: none;
 }
 
 .loading {
@@ -71,18 +20,17 @@ body {
     width: 100%;
     height: 100%;
     z-index: 10;
-    background: #FF8C8C url(../images/best_wishes_tiny.png) no-repeat center;
+    background: url(../images/best_wishes_tiny.png) no-repeat center;
     animation: bounceOut 0.5s ease 1s;
-    -webkit-animation: bounceOut 0.5s ease 1s;
+    -webkit-animation: bounceOut 0.5s ease;
     animation-fill-mode: both;
     -webkit-animation-fill-mode: both;
     -webkit-animation-play-state: paused;
     animation-play-state: paused;
 
     background-size: 50%;
-    /*will-change: background-size, opacity;*/
-    /*-webkit-will-change: background-size, opacity;*/
 }
+
 .loading.running {
     animation-play-state: running;
     -webkit-animation-play-state: running;
@@ -100,4 +48,49 @@ body {
         background-size: 100%;
         opacity: 0;
     }
+}
+
+#container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#container canvas {
+    height: 100%;
+    position: absolute;
+    -webkit-animation: fadeIn 1s linear;
+    animation: fadeIn 1s linear;
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+#menu {
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    bottom: 1.2rem;
+    right: 1rem;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.5) url(../images/best_wishes_tiny.png) no-repeat center center;
+    background-size: 50px;
 }
