--- a/views/index.html
+++ b/views/index.html
@@ -8,20 +8,17 @@
     <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date).getTime() + '">')</script>
 </head>
 <body>
-    <div class="loading">
-        <!--<img src="../images/best_wishes.png" alt="">-->
-    </div>
+    <div class="loading"></div>
     <div id="container" class="blur">
-        <ul class="bg">
-            <li class="a"></li>
-            <li class="b hide"></li>
-        </ul>
+        <div class="hide image"></div>
+        <div class="canvas"></div>
     </div>
     <div id="menu"></div>
 </body>
 <!--<script src="../js/fk.js"></script>-->
 <!--<script src="../js/zepto.js"></script>-->
 <!--<script src="../js/esl/esl.js"></script>-->
+<script src="../js/blur.js"></script>
 <script>
     document.write('<script src="../js/base.js?t=' + (new Date).getTime() + '"><\/script>');
 </script>
