trial 9, and finished with loading

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,11 @@
         <div class="hide image"></div>
         <div class="canvas"></div>
     </div>
+    <div class="wrapper">
+        <div>
+
+        </div>
+    </div>
     <div id="menu"></div>
 </body>
 <!--<script src="../js/fk.js"></script>-->
