--- a/css/base.css
+++ b/css/base.css
@@ -8,7 +8,8 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #FF8C8C;
+    /*background-color: #FF8C8C;*/
+    background-color: #FF6766;
 }
 
 .hide {
@@ -20,7 +21,9 @@ body {
     width: 100%;
     height: 100%;
     z-index: 10;
-    background: url(../images/best_wishes_tiny.png) no-repeat center;
+    /*background: url(../images/best_wishes_tiny.png) no-repeat center;*/
+    background: url(../images/running.gif) no-repeat center;
+    background-color: inherit;
     animation: bounceOut 0.5s ease 1s;
     -webkit-animation: bounceOut 0.5s ease;
     animation-fill-mode: both;
@@ -60,8 +63,21 @@ body {
 #container canvas {
     height: 100%;
     position: absolute;
+}
+
+#container canvas.fadeIn {
     -webkit-animation: fadeIn 1s linear;
     animation: fadeIn 1s linear;
+}
+
+#container canvas.fadeOut {
+    -webkit-animation: fadeOut 1s linear;
+    animation: fadeOut 1s linear;
+    opacity: 0;
+}
+
+.invisible {
+    opacity: 0;
 }
 
 @-webkit-keyframes fadeIn {
@@ -82,6 +98,24 @@ body {
     }
 }
 
+@-webkit-keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
 #menu {
     width: 4rem;
     height: 4rem;
@@ -94,3 +128,21 @@ body {
     background: rgba(255, 255, 255, 0.5) url(../images/best_wishes_tiny.png) no-repeat center center;
     background-size: 50px;
 }
+
+/* Wrapper */
+
+.wrapper {
+    position: absolute;
+    width: 90%;
+    left: 5%;
+    height: 94%;
+    top: 3%;
+    box-shadow: 0 0 1rem;
+
+    /*width: 100%;*/
+    /*height: 100%;*/
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+
+.bg-c
