--- a/views/heart.html
+++ b/views/heart.html
@@ -17,13 +17,6 @@
 
         body {
             height: 100%;
-            background-color: white;
-        }
-
-        #canvasZone {
-            width: 100%;
-            height: 100%;
-            text-align: center;
             background-color: black;
         }
 
@@ -34,7 +27,7 @@
     </style>
     <script type="text/javascript">
         var arr = [];//保存所有的XY坐标，只为验证。实际程序中可删除。  
-        var r = 4;
+        var r = 10;
         var radian;//弧度  
         var i;
         var radianDecrement;//弧度增量  
@@ -43,57 +36,59 @@
         var num = 360;//分割为 360 个点  
         var startRadian = Math.PI;
         var ctx;
+        var originX = 180;
+        var originY = 300;
+        var color = '#FF7272';
         window.onload = function () {
             startAnimation();
         }
         function startAnimation() {
-            ctx = document.getElementById("myCanvas").getContext("2d");
-            //让画布撑满整个屏幕，-20是滚动条的位置，需留出。如滚动条出现则会挤压画布。  
-            WINDOW_HEIGHT = document.documentElement.clientHeight - 20;
-            WINDOW_WIDTH = document.documentElement.clientWidth - 20;
-            // ctx.width = WINDOW_WIDTH;  
-            // ctx.height = WINDOW_HEIGHT;  
-            ctx.width = 600;
-            ctx.height = 600;
+            var canvas = document.getElementById("myCanvas");
+            ctx = canvas.getContext("2d");
+            canvas.width = document.documentElement.clientWidth;
+            canvas.height = document.documentElement.clientHeight;
             drawHeart();
         }
 
         function drawHeart() {
-
-            ctx.strokeStyle = "red";
-            ctx.lineWidth = 1;//设置线的宽度  
+            ctx.strokeStyle = color;
+            ctx.lineWidth = 2;//设置线的宽度
             radian = startRadian;//弧度设为初始弧度  
             radianDecrement = Math.PI / num * 2;
             ctx.moveTo(getX(radian), getY(radian));//移动到初始点  
             i = 0;
-            intervalId = setInterval("printHeart()", time);
+            intervalId = setInterval(printHeart, time);
         }
         //x = 16 sin^3 t, y = (13 cos t - 5 cos 2t - 2 cos 3t - cos 4t)  
         function printHeart() {
+            var s_x = getX(radian);
+            var s_y = getY(radian);
             radian += radianDecrement;
-            ctx.lineTo(getX(radian), getY(radian));//在旧点和新点之间连线  
+            var d_x = getX(radian);
+            var d_y = getY(radian);
+//            ctx.lineJoin="round";
+            ctx.lineTo(d_x, d_y);//在旧点和新点之间连线
+            ctx.arcTo(s_x, s_y, d_x, d_y, 5);//在旧点和新点之间连线
+//            console.log(getX(radian), getY(radian));
             //arr.push("X:" + getX(radian) + "<br/>Y:" + getY(radian) + "<br/>");  
             i++;
             ctx.stroke();//画线  
             if (i >= num) {
                 clearInterval(intervalId);
-                //document.getElementById("bs").innerHTML = arr.join("");//打印所有的XY坐标点。  
+                ctx.fillStyle = color;
+                ctx.fill();
             }
         }
         function getX(t) {//由弧度得到 X 坐标  
-            return 100 + r * (16 * Math.pow(Math.sin(t), 3));
+            return originX + r * (16 * Math.pow(Math.sin(t), 3));
         }
 
         function getY(t) {//由弧度得到 Y 坐标  
-            return 50 - r * (13 * Math.cos(t) - 5 * Math.cos(2 * t) - 2 * Math.cos(3 * t) - Math.cos(4 * t));
+            return originY - r * (13 * Math.cos(t) - 5 * Math.cos(2 * t) - 2 * Math.cos(3 * t) - Math.cos(4 * t));
         }
     </script>
 </head>
 <body>
-<div id="canvasZone">
     <canvas id="myCanvas"></canvas>
-</div>
-<div id="bs">
-</div>
 </body>
 </html>  
