--- a/views/test.html
+++ b/views/test.html
@@ -107,10 +107,9 @@
             var dy = c.y - dh / 2;
 
             img.onload = function () {
-                dw
-                setInterval(function () {
+//                setInterval(function () {
                     $this.context.drawImage(img, 0, 0, img.width, img.height, dx, dy, dw, dh);
-                }, 100);
+//                }, 100);
             };
         },
         bloom2: function () {
