--- a/views/test2.html
+++ b/views/test2.html
@@ -88,7 +88,7 @@
                 var i = 0;
                 var ctx = $this.context;
                 var imgDrew = false;
-                ctx.drawImage(img, 0, 0, 300, 300);
+                ctx.drawImage(img, 0, 0, 100, 100, 100, 100, 100, 100);
 return ;
                 var a = setInterval(function () {
 //                    if (!imgDrew) {
