--- a/css/base.css
+++ b/css/base.css
@@ -1,19 +1,14 @@
-body, img, ul {
-    border: none;
+html, body, div {
+    padding: 0;
     margin: 0;
-    padding: 0
+}
+
+html, body {
+    height: 100%;
 }
 
 body {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    /*background-color: #FF8C8C;*/
-    background-color: #FF6766;
-}
-
-.hide {
-    display: none;
+    background-color: #ffe;
 }
 
 .loading {
@@ -21,9 +16,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 10;
-    /*background: url(../images/best_wishes_tiny.png) no-repeat center;*/
-    background: url(../images/running.gif) no-repeat center;
-    background-color: inherit;
+    background: #FF6766 url(../images/running.gif) no-repeat center;
     animation: bounceOut 0.5s ease 1s;
     -webkit-animation: bounceOut 0.5s ease;
     animation-fill-mode: both;
@@ -53,117 +46,146 @@ body {
     }
 }
 
-#container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-#container canvas {
-    height: 100%;
-    position: absolute;
-}
-
-#container canvas.fadeIn {
-    -webkit-animation: fadeIn 1s linear;
-    animation: fadeIn 1s linear;
-}
-
-#container canvas.fadeOut {
-    -webkit-animation: fadeOut 1s linear;
-    animation: fadeOut 1s linear;
-    opacity: 0;
-}
-
-.invisible {
-    opacity: 0;
-}
-
-@-webkit-keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes fadeOut {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
-}
-
-@keyframes fadeOut {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
-}
-
-#menu {
-    width: 4rem;
-    height: 4rem;
-    position: absolute;
-    bottom: 1.2rem;
-    right: 1rem;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, 0.5) url(../images/best_wishes_tiny.png) no-repeat center center;
-    background-size: 100%;
-}
-
-/* Wrapper */
-
 .wrapper {
-    position: absolute;
-    width: 90%;
-    left: 5%;
-    height: 94%;
-    top: 3%;
-    box-shadow: 0 0 1rem;
-
-    /*width: 100%;*/
-    /*height: 100%;*/
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-.wrapper>div{
-    height: 100%;
     overflow: hidden;
 }
 
-.wrapper .heart{
-    height: 50%;
+.wrapper, .wrapper > div {
+    height: 100%;
+}
+
+.wrapper .welcome .circle {
     width: 100%;
-    position: relative;
-    background: url(../images/flowers_ring.png) center no-repeat;
-    background-size: 100%;
-}
-
-.wrapper .words{
     height: 50%;
-    width: 90%;
-    margin: 0 auto;
     position: relative;
-    /*background:black;*/
-    overflow-y: auto;
-    overflow-x: hidden;
+    background-image: url(../images/f/ring.png);
+    background-size: 100%;
+    background-position: 2px 6px;
+    background-repeat: no-repeat;
 }
 
+.circle > div {
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    opacity: 0;
+}
+
+.circle div.img-1 {
+    background-image: url(../images/f/f1.png);
+}
+
+.circle div.img-2 {
+    background-image: url(../images/f/f2.png);
+}
+
+.circle div.img-3 {
+    background-image: url(../images/f/f3.png);
+}
+
+.circle div.img-4 {
+    background-image: url(../images/f/f4.png);
+}
+
+.circle div.img-5 {
+    background-image: url(../images/f/f5.png);
+}
+
+.circle div.img-6 {
+    background-image: url(../images/f/f6.png);
+}
+
+.circle div.img-7 {
+    background-image: url(../images/f/f7.png);
+}
+
+.circle div.img-8 {
+    background-image: url(../images/f/f8.png);
+}
+
+.circle div.img-9 {
+    background-image: url(../images/f/f9.png);
+}
+
+.circle div.img-10 {
+    background-image: url(../images/f/f10.png);
+}
+
+.circle div.img-11 {
+    background-image: url(../images/f/f11.png);
+}
+
+.circle div.img-12 {
+    background-image: url(../images/f/f12.png);
+}
+
+.circle div.img-13 {
+    background-image: url(../images/f/f13.png);
+}
+
+.circle div.img-14 {
+    background-image: url(../images/f/f14.png);
+}
+
+.circle div.img-15 {
+    background-image: url(../images/f/f15.png);
+}
+
+.circle div.img-16 {
+    background-image: url(../images/f/f6.png);
+}
+
+.circle div.img-17 {
+    background-image: url(../images/f/f17.png);
+}
+
+.circle div.img-18 {
+    background-image: url(../images/f/f18.png);
+}
+
+.circle div.img-19 {
+    background-image: url(../images/f/f19.png);
+}
+
+.circle div.img-20 {
+    background-image: url(../images/f/f20.png);
+}
+
+.circle div.img-21 {
+    background-image: url(../images/f/f21.png);
+}
+.circle div.img-22 {
+    background-image: url(../images/f/f22.png);
+}
+
+.words * {
+    font-family: "Consolas", "Monaco", "Bitstream Vera Sans Mono", "Courier New", "sans-serif";
+}
+
+.wrapper .welcome .words {
+    height: 50%;
+    margin-top: 100px;
+}
+
+div.bloom {
+    opacity: 1;
+    animation: bloom .5s linear;
+    -webkit-animation: bloom .5s linear;
+}
+
+@keyframes bloom {
+    from {
+        background-size: 0;
+    }
+
+}
+
+@-webkit-keyframes bloom {
+    from {
+        background-size: 0;
+    }
+
+}
