--- a/views/index.html
+++ b/views/index.html
@@ -3,29 +3,54 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="screen-orientation" content="landscape" />
     <title>Home</title>
     <!--<link rel="stylesheet" href="../css/base.css">-->
     <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date).getTime() + '">')</script>
 </head>
 <body>
-    <div class="loading"></div>
-    <div id="container" class="blur">
-        <div class="hide image"></div>
-        <div class="canvas"></div>
-    </div>
-    <div class="wrapper">
-        <div class="welcome">
-            <div class="heart">
-            </div>
-            <div class="words"></div>
+<div class="loading"></div>
+<div id="container"></div>
+<div class="wrapper">
+    <div class="welcome">
+        <div class="circle" id="circle-flowers">
+            <div class="img-1"></div>
+            <div class="img-2"></div>
+            <div class="img-3"></div>
+            <div class="img-4"></div>
+            <div class="img-5"></div>
+            <div class="img-6"></div>
+            <div class="img-7"></div>
+            <div class="img-8"></div>
+            <div class="img-9"></div>
+            <div class="img-10"></div>
+            <div class="img-11"></div>
+            <div class="img-12"></div>
+            <div class="img-13"></div>
+            <div class="img-14"></div>
+            <div class="img-15"></div>
+            <div class="img-16"></div>
+            <div class="img-17"></div>
+            <div class="img-18"></div>
+            <div class="img-19"></div>
+            <div class="img-20"></div>
+            <div class="img-21"></div>
+            <div class="img-22"></div>
+        </div>
+        <div class="words">
+<pre>
+    With this hand,I will lift your sorrows.
+
+    Your cup will never empty,for I will be your wine.
+
+    With this candle,I will light your way in darkness.
+
+    With this ring, I ask you to be mine.
+</pre>
         </div>
     </div>
-    <div id="menu"></div>
+</div>
 </body>
-<!--<script src="../js/fk.js"></script>-->
-<!--<script src="../js/zepto.js"></script>-->
-<!--<script src="../js/esl/esl.js"></script>-->
-<script src="../js/blur.js"></script>
 <script>
     document.write('<script src="../js/base.js?t=' + (new Date).getTime() + '"><\/script>');
 </script>
