--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <meta name="screen-orientation" content="landscape" />
+    <meta name="screen-orientation" content="landscape"/>
     <title>Home</title>
     <!--<link rel="stylesheet" href="../css/base.css">-->
-    <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date).getTime() + '">')</script>
+    <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date    ).getTime() + '">')</script>
 </head>
 <body>
 <div class="loading"></div>
@@ -37,16 +37,18 @@
             <div class="img-21"></div>
             <div class="img-22"></div>
         </div>
-        <div class="words">
-<pre>
-    With this hand,I will lift your sorrows.
-
-    Your cup will never empty,for I will be your wine.
-
-    With this candle,I will light your way in darkness.
-
-    With this ring, I ask you to be mine.
-</pre>
+        <div id="timing-being-together" class="hide font-it">
+            <div class="prefix">We have been <b>together</b> for </div>
+            <i class="value day">600</i><i class="unit day"></i>
+            <i class="value hour">600</i><i class="unit hour"></i>
+            <i class="value minute">600</i><i class="unit minute"></i>
+            <i class="value second">600</i><i class="unit second"></i>
+        </div>
+        <div class="words hide font-it" id="votes">
+            <p>With this hand,I will lift your sorrows.</p>
+            <p>Your cup will never empty,for I will be your wine.</p>
+            <p>With this candle,I will light your way in darkness.</p>
+            <p>With this ring, I ask you to be mine.</p>
         </div>
     </div>
 </div>
