--- a/css/base.css
+++ b/css/base.css
@@ -54,6 +54,13 @@ body {
     height: 100%;
 }
 
+.wrapper > div {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
 .wrapper .welcome .circle {
     width: 100%;
     height: 50%;
@@ -157,18 +164,21 @@ body {
 .circle div.img-21 {
     background-image: url(../images/f/f21.png);
 }
+
 .circle div.img-22 {
     background-image: url(../images/f/f22.png);
 }
 
+.font-it,
 .font-it > * {
     font-family: "Consolas", "Monaco", "Bitstream Vera Sans Mono", "Courier New", "sans-serif";
 }
 
 .wrapper .welcome .words {
     height: 50%;
-    margin-top: 100px;
+    padding: 0 2rem;
 }
+
 .hide {
     display: none;
 }
@@ -192,6 +202,7 @@ div.bloom {
     }
 
 }
+
 #timing-being-together {
     position: absolute;
     text-align: center;
@@ -201,18 +212,51 @@ div.bloom {
 #timing-being-together .value {
     font-size: 1.5rem;
 }
+
 #timing-being-together .unit:after {
     font-size: 0.8rem;
 }
+
 #timing-being-together .unit.day:after {
     content: '天';
 }
+
 #timing-being-together .unit.hour:after {
     content: '小时'
 }
+
 #timing-being-together .unit.minute:after {
     content: '分'
 }
+
 #timing-being-together .unit.second:after {
     content: '秒'
+}
+
+.flip-0-90 {
+    transform: rotateY(90deg);
+    animation: flip-0-90 0.5s linear;
+}
+
+.flip-90-0 {
+    transform: rotateX(0deg);
+    animation: flip-90-0 0.5s linear;
+}
+
+@keyframes flip-0-90 {
+    from {
+        transform: rotateY(0deg);
+    }
+    to {
+        transform: rotateY(90deg);
+    }
+}
+
+@keyframes flip-90-0 {
+    from {
+        transform: rotateY(90deg);
+    }
+    to {
+        transform: rotateY(0deg);
+    }
 }
