--- a/views/index.html
+++ b/views/index.html
@@ -38,18 +38,40 @@
             <div class="img-22"></div>
         </div>
         <div id="timing-being-together" class="hide font-it">
-            <div class="prefix">We have been <b>together</b> for </div>
+            <div class="prefix">We have been <b>together</b> for</div>
             <i class="value day">600</i><i class="unit day"></i>
             <i class="value hour">600</i><i class="unit hour"></i>
             <i class="value minute">600</i><i class="unit minute"></i>
             <i class="value second">600</i><i class="unit second"></i>
         </div>
         <div class="words hide font-it" id="votes">
-            <p>With this hand,I will lift your sorrows.</p>
-            <p>Your cup will never empty,for I will be your wine.</p>
-            <p>With this candle,I will light your way in darkness.</p>
-            <p>With this ring, I ask you to be mine.</p>
+            No measure of time<br>with you <br>will be long enough<br>but <br>let's start forever
         </div>
+    </div>
+    <div class="love-story hide">
+        <pre>
+You know when I said I knew litter about love?
+Well,that wasn't ture
+I know a lot about love
+I've seen it,I've seen it centuries and centuries of it
+And it was the only thing that made watching you would bearable
+All this wars,pain and lies,hate
+Made me want to turn away and never look down again
+But to see the way that mankind love
+I mean,you could search the furthest reaches the univise and never find anything more beautiful
+so,yes,I know that love is unconditional
+But I also know it can be unpredictable,unexpected,uncontrollable,unbearable
+and,well,strangely easy to mistake for ionthing
+And,what I'm trying to say is
+I think I love you
+My heart,it fells like my chest can barely contain it
+Like it doesn't belong to me anymore,it belongs to you
+And if you wanted it,I'd wish for nothing to exchange
+No gifts,no goods,no demonstrations for devotion
+Nothing but knowing you love me too
+Just your heart
+In exchange for mine
+        </pre>
     </div>
 </div>
 </body>
