--- a/views/index.html
+++ b/views/index.html
@@ -48,20 +48,20 @@
             No measure of time<br>with you <br>will be long enough<br>but <br>let's start forever
         </div>
     </div>
-    <div class="love-story hide">
+    <div class="love-story rotateY-90">
         <pre>
 You know when I said I knew litter about love?
-Well,that wasn't ture
+Well,that wasn't true
 I know a lot about love
 I've seen it,I've seen it centuries and centuries of it
 And it was the only thing that made watching you would bearable
 All this wars,pain and lies,hate
 Made me want to turn away and never look down again
 But to see the way that mankind love
-I mean,you could search the furthest reaches the univise and never find anything more beautiful
+I mean,you could search the furthest reaches the universe and never find anything more beautiful
 so,yes,I know that love is unconditional
 But I also know it can be unpredictable,unexpected,uncontrollable,unbearable
-and,well,strangely easy to mistake for ionthing
+and,well,strangely easy to mistake for nothing
 And,what I'm trying to say is
 I think I love you
 My heart,it fells like my chest can barely contain it
