--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,7 @@
             No measure of time<br>with you <br>will be long enough<br>but <br>let's start forever
         </div>
     </div>
-    <div class="love-story rotateY-90">
+    <div class="love-story rotateY-90 font-it">
         <pre>
 You know when I said I knew litter about love?
 Well,that wasn't true
@@ -61,7 +61,7 @@ But to see the way that mankind love
 I mean,you could search the furthest reaches the universe and never find anything more beautiful
 so,yes,I know that love is unconditional
 But I also know it can be unpredictable,unexpected,uncontrollable,unbearable
-and,well,strangely easy to mistake for nothing
+and,well,strangely easy to mistake for loathing
 And,what I'm trying to say is
 I think I love you
 My heart,it fells like my chest can barely contain it
