--- a/views/index.html
+++ b/views/index.html
@@ -73,6 +73,9 @@ Just your heart
 In exchange for mine
         </pre>
     </div>
+    <div class="album">
+
+    </div>
 </div>
 </body>
 <script>
