--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,7 @@
             No measure of time<br>with you <br>will be long enough<br>but <br>let's start forever
         </div>
     </div>
-    <div class="love-story rotateY-90 font-it">
+    <div class="love-story hide rotateY-90 font-it" data-init="typeIn">
         <pre>
 You know when I said I knew litter about love?
 Well,that wasn't true
@@ -74,7 +74,16 @@ In exchange for mine
         </pre>
     </div>
     <div class="album">
-
+        <ul>
+            <li>
+                <img src="../images/photos/flying_elephant.jpg" alt="">
+                <p>Flying Elephant</p>
+            </li>
+            <li>
+                <img src="../images/photos/kitty_with_rose.jpg" alt="">
+                <p>Kitty Kissing Rose</p>
+            </li>
+        </ul>
     </div>
 </div>
 </body>
