--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@ In exchange for mine
         </pre>
     </div>
     <div class="album">
-        <ul>
+        <ul class="bg-pink">
             <li>
                 <img src="../images/photos/flying_elephant.jpg" alt="">
                 <p>Flying Elephant</p>
