--- a/views/index.html
+++ b/views/index.html
@@ -73,25 +73,16 @@ Just your heart
 In exchange for mine
         </pre>
     </div>
-    <div class="album">
+    <div class="album rotateY-90">
         <ul class="bg-pink">
             <li>
-                <img src="../images/photos/1.jpg" alt="">
+                <img src="../images/photos/1.jpg">
                 <p>Flying Elephant</p>
             </li>
             <li>
-                <img src="../images/photos/2.jpg" alt="">
+                <img src="../images/photos/2.jpg">
                 <p>Kitty Kissing Rose</p>
             </li>
-            <script>
-                for (var i =0 ; i<40; i++) {
-                    document.write('<li style="transform:rotateZ(' + i * 0.2 + 'deg);">\
-                            <img src="../images/photos/' + (i|1 ? 1 : 2) + '.jpg">\
-                            <p>Kitty Kissing Rose</p>\
-                    </li>')
-                }
-
-            </script>
         </ul>
     </div>
 </div>
