--- a/views/index.html
+++ b/views/index.html
@@ -74,15 +74,24 @@ In exchange for mine
         </pre>
     </div>
     <div class="album rotateY-90">
-        <ul class="bg-pink">
-            <li>
-                <img src="../images/photos/1.jpg">
-                <p>Flying Elephant</p>
-            </li>
-            <li>
-                <img src="../images/photos/2.jpg">
-                <p>Kitty Kissing Rose</p>
-            </li>
+        <ul class="bg-pink" id="album-ul">
+            <li><img src="../images/photos/0.jpg"><p>One line description 1</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 2</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 3</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 4</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 5</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 6</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 7</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 8</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 9</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 10</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 11</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 12</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 13</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 14</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 15</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 16</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 17</p></li>
         </ul>
     </div>
 </div>
