--- a/views/index.html
+++ b/views/index.html
@@ -73,7 +73,7 @@ Just your heart
 In exchange for mine
         </pre>
     </div>
-    <div class="album rotateY-90">
+    <div class="album 1rotateY-90">
         <ul class="bg-pink" id="album-ul">
             <li><img src="../images/photos/0.jpg"><p>One line description 1</p></li>
             <li><img src="../images/photos/0.jpg"><p>One line description 2</p></li>
