--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="love-story hide rotateY-90 font-it" data-init="typeIn">
         <pre>
-You know when I said I knew litter about love?
+You know when I said I knew little about love?
 Well,that wasn't true
 I know a lot about love
 I've seen it,I've seen it centuries and centuries of it
@@ -94,6 +94,21 @@ In exchange for mine
             <li><img src="../images/photos/0.jpg"><p>One line description 17</p></li>
         </ul>
     </div>
+    <script>
+        document.write('<style>');
+
+        function delay(i) {
+            return (0.05 * (i - 1)).toFixed(1);
+        }
+        for (var i = 1; i<=17 ; i++) {
+            document.write('\n#album-ul.photo-in li:nth-child('+i+') {\n\
+            animation: photoIn 0.5s ease-in-out '+delay(i)+'s;\n\
+            -webkit-animation: photoIn 0.5s ease-in-out '+delay(i)+'s;\n\
+            animation-fill-mode: backwards;\n\
+            }');
+        }
+        document.write('</style>');
+    </script>
 </div>
 </body>
 <script>
